force-app/main/default/objects/Carbon_Comparison__e/Carbon_Comparison__e.object-meta.xml
<CustomObject>
    <label>Carbon Comparison</label>
    <pluralLabel>Carbon Comparisons</pluralLabel>
</CustomObject>