force-app/main/default/objects/Carbon_Comparison__e/fields/Annual_Mileage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Mileage__c</fullName>
    <label>Annual Mileage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>