force-app/main/default/objects/Carbon_Comparison__e/fields/Model_Year__c.field-meta.xml
<CustomField>
    <fullName>Model_Year__c</fullName>
    <label>Model Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>